[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["Zaw Waiyan Lwin <zaw@waiyan13.work>"]
description = "API for KIMA guitar store"
name = "kima-guitar-api"
packages = [{from = "src", include = "kima_guitar_api"}]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.92.0"
hypercorn = {extras = ["uvloop"], version = "^0.14.3"}
python-dotenv = "^1.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.4"}
alembic = {extras = ["tz"], version = "^1.9.4"}
asyncpg = "^0.27.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
build = "^0.10.0"
isort = "^5.12.0"
mypy = "^1.0.1"
ruff = "^0.0.253"
types-passlib = "^1.7.7.10"
types-python-jose = "^3.3.4.5"
